Add Prefs selectable stylesheets.